#40 Adjusted sizing of list links component

--- a/index.html
+++ b/index.html
@@ -39,17 +39,21 @@
 							</div>
 						</li>
 						<li class="o-list-inline__item">
-							<a class="c-nav-bar__link" href="#">Help</a>
-						</li>
-						<li class="o-list-inline__item">
 							<button class="o-button-bare c-button--dropdown c-nav-bar__link">
-								<span class="u-text-truncate">Carolyn Chapman</span>
+								<span class="u-text-truncate">CC</span>
 							</button>
 							<div class="o-container o-container--xxs c-dropdown" data-position="bottom-end">
+								<div class="o-box o-box--small">
+									<p class="u-text-truncate">
+										Signed in as<br>
+										<strong>Carolyn Chapman</strong>
+									</p>
+								</div>
 								<ul class="o-list-bare">
-									<li><a href="#" class="c-list-link">Profile</a></li>
-									<li><a href="#" class="c-list-link">Security</a></li>
-									<li><a href="#" class="c-list-link c-list-link--separated">Sign Out</a></li>
+									<li><a href="#" class="c-list-link c-list-link--small c-list-link--separated">Profile</a></li>
+									<li><a href="#" class="c-list-link c-list-link--small">Password and Security</a></li>
+									<li><a href="#" class="c-list-link c-list-link--small c-list-link--separated">Help</a></li>
+									<li><a href="#" class="c-list-link c-list-link--small">Sign Out</a></li>
 								</ul>
 							</div>
 						</li>
@@ -257,10 +261,12 @@
 			<div class="o-box u-border-bottom">
 				<h2>Dropdown</h2>
 				<button class="c-button c-button--dropdown">Toggle Dropdown</button>
-				<div class="o-container o-container--xs c-dropdown">
-					<div class="o-box">
-						<p>The children groped their way back to the spring. The weary time dragged on; they slept again, and awoke famished and woe-stricken. <a href="#">Tom believed it must be Tuesday</a> by this time.</p>
-					</div>
+				<div class="o-container o-container--xxs c-dropdown">
+					<ul class="o-list-bare">
+						<li><button class="o-button-bare c-list-link">Edit Profile</button></li>
+						<li><button class="o-button-bare c-list-link">Download Data</button></li>
+						<li><button class="o-button-bare c-list-link c-list-link--separated u-text-error">Delete User</button></li>
+					</ul>
 				</div>
 			</div>
 			<div class="o-box u-border-bottom">
