#58 Added disabled state to checkboxes and radios

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 					</label>
 					<label class="c-field">
 						<span class="c-field__label">Search</span>
-						<input type="search" value="password123">
+						<input type="search" value="The meaning of life">
 					</label>
 					<label class="c-field">
 						<span class="c-field__label is-required">Email Address</span>
@@ -312,7 +312,7 @@
 					</label>
 					<label class="c-field">
 						<span class="c-field__label">URL</span>
-						<input type="url" value="https://reflectivity.io">
+						<input type="url" value="https://reflectivity.io" readonly>
 					</label>
 					<label class="c-field">
 						<span class="c-field__label">Number</span>
@@ -358,7 +358,7 @@
 							</li>
 							<li class="c-choices__item">
 								<label>
-									<input type="checkbox">
+									<input type="checkbox" disabled>
 									<span class="c-field__label c-field__label--checkbox">Product releases</span>
 								</label>
 							</li>
@@ -375,7 +375,7 @@
 							</li>
 							<li class="o-list-inline__item c-choices__item">
 								<label>
-									<input name="radio-group" type="radio">
+									<input name="radio-group" type="radio" disabled>
 									<span class="c-field__label c-field__label--radio">Phone</span>
 								</label>
 							</li>
@@ -397,7 +397,7 @@
 						<ul class="o-list-bare c-choices">
 							<li class="c-choices__item">
 								<label class="c-switch">
-									<input type="checkbox" class="c-switch__input u-sr-only" checked>
+									<input type="checkbox" class="c-switch__input u-sr-only" checked disabled>
 									<span class="c-switch__slider"></span>
 									<span class="c-switch__label">Security alerts</span>
 								</label>
@@ -407,6 +407,13 @@
 									<input type="checkbox" class="c-switch__input u-sr-only">
 									<span class="c-switch__slider"></span>
 									<span class="c-switch__label">Product releases</span>
+								</label>
+							</li>
+							<li class="c-choices__item">
+								<label class="c-switch">
+									<input type="checkbox" class="c-switch__input u-sr-only" checked>
+									<span class="c-switch__slider"></span>
+									<span class="c-switch__label">Company announcements</span>
 								</label>
 							</li>
 						</ul>
