#60 Changed help-text classname to just field text

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 										<label class="c-field">
 											<span class="c-field__label">Tell us more, if you'd like</span>
 											<textarea></textarea>
-											<span class="c-field__help-text">Maximum 300 characters</span>
+											<span class="c-field__text">Maximum 300 characters</span>
 										</label>
 										<div class="c-button-bar">
 											<button class="c-button c-button--primary js-close-form-modal">Submit Feedback</button>
@@ -304,7 +304,7 @@
 					<label class="c-field">
 						<span class="c-field__label is-required">Email Address</span>
 						<input type="email" class="c-input-error" required>
-						<span class="c-field__help-text u-text-error">The email address is required.</span>
+						<span class="c-field__text u-text-error">The email address is required.</span>
 					</label>
 					<label class="c-field">
 						<span class="c-field__label">Phone Number</span>
@@ -446,7 +446,7 @@
 						<label class="c-field c-field--inline">
 							<span class="c-field__label">Email Address</span>
 							<input type="email" value="c.chapman@sterlingindustries" class="c-input-error">
-							<span class="c-field__help-text u-text-error">This email address is invalid.</span>
+							<span class="c-field__text u-text-error">This email address is invalid.</span>
 						</label>
 						<label class="c-field c-field--inline">
 							<span class="c-field__label">Bio</span>
