#52 Added aria accessiblity attributes to progress bar

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 				<h2>Progress Indicator</h2>
 				<div class="c-progress">
 					<div class="c-progress__track">
-						<div class="c-progress__bar c-progress__bar--striped" style="width: 63%;"></div>
+						<div class="c-progress__bar c-progress__bar--striped" style="width: 63%;" role="progressbar" aria-valuenow="63" aria-valuemin="0" aria-valuemax="100" aria-valuetext="Downloading files: 63%"></div>
 					</div>
 					<div class="c-progress__description">63% complete</div>
 				</div>
