--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 				<p>All modals must have a heading (<code>&lt;h2&gt;</code>).</p>
 				<div class="c-button-bar">
 					<button class="c-button c-button--primary js-open-modal">Open Modal</button>
-					<div class="c-modal js-modal" data-open-modal="js-open-modal" data-close-modal="js-close-modal">
-						<div class="o-container--md u-center">
+					<div class="c-modal js-modal" data-open-modal="js-open-modal" data-close-modal="js-close-modal" role="dialog" aria-hidden="true">
+						<div class="o-container--md u-center" role="document">
 							<div class="c-modal__container">
 								<div class="o-box c-modal__content">
 									<div class="o-island">
@@ -132,20 +132,22 @@
 						</div>
 					</div>
 					<button class="c-button c-button--primary js-open-2fa-modal">Model with Close Button</button>
-					<div class="c-modal js-modal" data-open-modal="js-open-2fa-modal" data-close-modal="js-close-2fa-modal">
-						<div class="o-container--sm u-center">
+					<div class="c-modal js-modal" data-open-modal="js-open-2fa-modal" data-close-modal="js-close-2fa-modal" role="dialog" aria-hidden="true">
+						<div class="o-container--sm u-center" role="document">
 							<div class="c-modal__container">
 								<div class="o-box">
 									<h2>Your Two-Factor Secret Key</h2>
 									<p class="u-text-big"><code>sedw gyiu kptt oqvu</code></p>
 								</div>
-								<button class="o-button-bare c-modal__close-button js-close-2fa-modal" aria-label="Close"><img src="images/icons/close.svg" alt="" width="11" height="11"></button>
+								<button class="o-button-bare c-button-close js-close-2fa-modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
 							</div>
 						</div>
 					</div>
 					<button class="c-button c-button--primary js-open-form-modal">Modal with Form</button>
-					<div class="c-modal js-modal" data-open-modal="js-open-form-modal" data-close-modal="js-close-form-modal">
-						<div class="o-container--md u-center">
+					<div class="c-modal js-modal" data-open-modal="js-open-form-modal" data-close-modal="js-close-form-modal" role="dialog" aria-hidden="true">
+						<div class="o-container--md u-center" role="document">
 							<div class="c-modal__container">
 								<form action="" method="get">
 									<div class="o-box">
@@ -185,13 +187,15 @@
 										</div>
 									</div>
 								</form>
-								<button class="o-button-bare c-modal__close-button js-close-form-modal" aria-label="Close"><img src="images/icons/close.svg" alt="" width="11" height="11"></button>
+								<button class="o-button-bare c-button-close js-close-form-modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
 							</div>
 						</div>
 					</div>
 					<button class="c-button c-button--danger js-open-delete-modal">Delete Users</button>
-					<div class="c-modal js-modal" data-open-modal="js-open-delete-modal" data-close-modal="js-close-delete-modal">
-						<div class="o-container--md u-center">
+					<div class="c-modal js-modal" data-open-modal="js-open-delete-modal" data-close-modal="js-close-delete-modal" role="dialog" aria-hidden="true">
+						<div class="o-container--md u-center" role="document">
 							<div class="c-modal__container">
 								<form action="" method="get">
 									<div class="o-box">
