#68 Added role attribute to alert component

--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
 			</div>
 			<div class="o-box u-border-bottom">
 				<h2>Alerts</h2>
-				<div class="c-alert">
+				<div class="c-alert" role="alert">
 					<div class="o-box o-box--small">
 						<p>The children groped their way back to the spring.</p>
 					</div>
 				</div>
-				<div class="c-alert c-alert--success">
+				<div class="c-alert c-alert--success" role="alert">
 					<div class="o-box o-box--small">
 						<div class="o-flag o-flag--small">
 							<div class="o-flag__img">
@@ -237,7 +237,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="c-alert c-alert--warning">
+				<div class="c-alert c-alert--warning" role="alert">
 					<div class="o-box o-box--small">
 						<div class="o-flag o-flag--small">
 							<div class="o-flag__img">
@@ -249,7 +249,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="c-alert c-alert--error">
+				<div class="c-alert c-alert--error" role="alert">
 					<div class="o-box o-box--small">
 						<div class="o-flag o-flag--small">
 							<div class="o-flag__img">
